fix horizontal arrows alignment

--- a/src/css/slider-pro.arrows.css
+++ b/src/css/slider-pro.arrows.css
@@ -18,7 +18,7 @@
 	width: 100%;
 	left: 0;
 	top: 50%;
-	margin-top: -20px;
+	margin-top: -15px;
 }
 
 .sp-vertical .sp-arrows {
